--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,7 @@
 	url = https://github.com/davidhalter/jedi-vim
 [submodule "vim/bundle/jsbeautify"]
 	path = vim/bundle/jsbeautify
-	url = https://github.com/maksimr/vim-jsbeautify
+    url = https://github.com/maksimr/vim-jsbeautify
+[submodule "vim/bundle/nerdtree"]
+    path = vim/bundle/nerdtree
+    url = git@github.com:scrooloose/nerdtree.git
