--- a/i3/config
+++ b/i3/config
@@ -26,13 +26,6 @@ font pango:monospace 8
 
 set $mod Mod4
 
-# use these keys for focus, movement, and resize directions when reaching for
-# the arrows is not convenient
-set $up l
-set $down k
-set $left j
-set $right semicolon
-
 # use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -40,7 +33,7 @@ floating_modifier $mod
 bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+k kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
