--- a/tmux.conf
+++ b/tmux.conf
@@ -19,10 +19,9 @@ set -g set-titles on
 set -g set-titles-string "tmux:#W#I"
 set -g base-index 1
 set -g status-left "-- #W --"
-set -g status-left-attr bold
 set -g status-right "#H:#S"
-set -g pane-active-border-bg black
-set -g pane-active-border-fg black
+set -g pane-active-border-style bg=black
+set -g pane-active-border-style fg=black
 set -g default-terminal "screen-256color"
 set -g detach-on-destroy on
 
@@ -31,10 +30,10 @@ setw -g monitor-activity off
 setw -g automatic-rename on
 
 # Colors
-setw -g window-status-current-fg blue
+setw -g window-status-current-style fg=blue
 
-set -g status-bg black
-set -g status-fg white
+set -g status-style bg=black
+set -g status-style fg=white
 
-set -g message-bg white
-set -g message-fg black
+set -g message-style bg=white
+set -g message-style fg=black
