--- a/i3/config
+++ b/i3/config
@@ -30,13 +30,15 @@ set $mod Mod4
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+# bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec urxvt -fn "xft:DejaVu Sans Mono"
 
 # kill focused window
 bindsym $mod+k kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec --no-startup-id rofi -show drun -run-shell-command '{terminal} -e zsh -ic "{cmd} && read"'
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -158,11 +160,14 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        position top
-        status_command i3status
-        tray_output primary
-}
+#bar {
+#        position top
+#        status_command i3status
+#        tray_output primary
+#}
+
+exec_always "bash ~/.config/polybar/launch.sh --forest"
+exec_always "bash ~/.fehbg"
 
 #######################################################################
 # automatically start i3-config-wizard to offer the user to create a
