--- a/i3/config
+++ b/i3/config
@@ -31,14 +31,15 @@ floating_modifier $mod
 
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec urxvt -fn "xft:DejaVu Sans Mono"
+#bindsym $mod+Return exec urxvt -fn "xft:DejaVu Sans Mono"
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+k kill
 
 # start dmenu (a program launcher)
-# bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec --no-startup-id rofi -show drun -run-shell-command '{terminal} -e zsh -ic "{cmd} && read"'
+bindsym $mod+d exec dmenu_run
+# bindsym $mod+d exec --no-startup-id rofi -show drun -run-shell-command '{terminal} -e zsh -ic "{cmd} && read"'
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -168,6 +169,7 @@ bindsym $mod+r mode "resize"
 
 exec_always "bash ~/.config/polybar/launch.sh --forest"
 exec_always "bash ~/.fehbg"
+exec_always "picom -b"
 
 #######################################################################
 # automatically start i3-config-wizard to offer the user to create a
