--- a/tmux.conf
+++ b/tmux.conf
@@ -18,8 +18,6 @@ set -g set-titles-string "tmux:#W#I"
 set -g base-index 1
 set -g status-left "-- #W --"
 set -g status-right "#H:#S"
-set -g pane-active-border-style bg=black
-set -g pane-active-border-style fg=black
 set -g default-terminal "screen-256color"
 set -g detach-on-destroy on
 
@@ -36,4 +34,28 @@ set -g status-style fg=white
 set -g message-style bg=white
 set -g message-style fg=black
 
-set-option -g allow-passthrough on
+# default statusbar colors
+set-option -g status-style fg=blue,bg=black
+
+# default window title colors
+set-window-option -g window-status-style fg=brightblue,bg=default
+
+# active window title colors
+set-window-option -g window-status-current-style fg=brightred,bg=default
+
+# pane border
+set-option -g pane-border-style fg=black
+set-option -g pane-active-border-style fg=brightblue
+
+# message text
+set-option -g message-style fg=brightred,bg=black
+
+# pane number display
+set-option -g display-panes-active-colour brightred
+set-option -g display-panes-colour blue
+
+# clock
+set-window-option -g clock-mode-colour green
+
+# bell
+set-window-option -g window-status-bell-style fg=black,bg=red
