--- a/i3/config
+++ b/i3/config
@@ -32,7 +32,7 @@ floating_modifier $mod
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec urxvt -fn "xft:DejaVu Sans Mono"
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec wezterm
 
 # kill focused window
 bindsym $mod+k kill
