--- a/tmux.conf
+++ b/tmux.conf
@@ -25,37 +25,23 @@ set -g detach-on-destroy on
 setw -g monitor-activity off
 setw -g automatic-rename on
 
-# Colors
-setw -g window-status-current-style fg=blue
+set -g @plugin "janoamaral/tokyo-night-tmux"
 
-set -g status-style bg=black
-set -g status-style fg=white
+set -g @tokyo-night-tmux_show_netspeed 1
+set -g @tokyo-night-tmux_netspeed_showip 1      # Display IPv4 address (default 0)
+set -g @tokyo-night-tmux_netspeed_refresh 1     # Update interval in seconds (default 1)
 
-set -g message-style bg=white
-set -g message-style fg=black
+set -g @tokyo-night-tmux_window_id_style digital
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
 
-# default statusbar colors
-set-option -g status-style fg=blue,bg=black
+set -g @tokyo-night-tmux_show_datetime 0
+set -g @tokyo-night-tmux_date_format MYD
+set -g @tokyo-night-tmux_time_format 24H
 
-# default window title colors
-set-window-option -g window-status-style fg=brightblue,bg=default
+set -g @tokyo-night-tmux_show_path 0
+set -g @tokyo-night-tmux_path_format relative # 'relative' or 'full'
 
-# active window title colors
-set-window-option -g window-status-current-style fg=brightred,bg=default
+set -g @tokyo-night-tmux_show_battery_widget 0
 
-# pane border
-set-option -g pane-border-style fg=black
-set-option -g pane-active-border-style fg=brightblue
-
-# message text
-set-option -g message-style fg=brightred,bg=black
-
-# pane number display
-set-option -g display-panes-active-colour brightred
-set-option -g display-panes-colour blue
-
-# clock
-set-window-option -g clock-mode-colour green
-
-# bell
-set-window-option -g window-status-bell-style fg=black,bg=red
+run '~/.tmux/plugins/tpm/tpm'
