--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,7 @@ set -g base-index 1
 set -g status-left "-- #W --"
 set -g status-right "#H:#S"
 set -g default-terminal "screen-256color"
+set -g default-terminal "wezterm"
 set -g detach-on-destroy on
 
 # Window options
@@ -45,3 +46,5 @@ set -g @tokyo-night-tmux_path_format relative # 'relative' or 'full'
 set -g @tokyo-night-tmux_show_battery_widget 0
 
 run '~/.tmux/plugins/tpm/tpm'
+
+set-option -g automatic-rename-format '#{b:pane_current_path}'
