aerospace: Always move Spotify to workspace 10

--- a/aerospace.toml
+++ b/aerospace.toml
@@ -88,3 +88,7 @@ esc = 'mode main'
 [[on-window-detected]]
 if.app-name-regex-substring = "flummy"
 run = "layout floating"
+
+[[on-window-detected]]
+if.app-id = "com.spotify.client"
+run = "move-node-to-workspace 10"
