--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,15 +1,38 @@
-# Prefix key
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# Keys
 bind k confirm kill-window
 bind K confirm kill-server
 
-# Keys w/o prefix key
 bind -n C-right next-window
 bind -n C-left previous-window
+bind -n C-up switch-client -n
+bind -n C-down switch-client -p
+
+unbind |
+unbind -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# vim-like pane switching
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy' # 'xclip -in -selection clipboard'
+
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r F run-shell "tmux neww ~/.local/bin/tmux-switch"
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
 
 # Options
 set -g bell-action any
@@ -18,8 +41,6 @@ set -g set-titles-string "tmux:#W#I"
 set -g base-index 1
 set -g status-left "-- #W --"
 set -g status-right "#H:#S"
-set -g default-terminal "screen-256color"
-set -g default-terminal "wezterm"
 set -g detach-on-destroy on
 
 # Window options
@@ -29,7 +50,7 @@ setw -g automatic-rename on
 set -g @plugin "janoamaral/tokyo-night-tmux"
 
 set -g @tokyo-night-tmux_show_netspeed 1
-set -g @tokyo-night-tmux_netspeed_showip 1      # Display IPv4 address (default 0)
+set -g @tokyo-night-tmux_netspeed_showip 2      # Display IPv4 address (default 0)
 set -g @tokyo-night-tmux_netspeed_refresh 1     # Update interval in seconds (default 1)
 
 set -g @tokyo-night-tmux_window_id_style digital
@@ -42,8 +63,6 @@ set -g @tokyo-night-tmux_time_format 24H
 
 set -g @tokyo-night-tmux_show_path 0
 set -g @tokyo-night-tmux_path_format relative # 'relative' or 'full'
-
-set -g @tokyo-night-tmux_show_battery_widget 0
 
 run '~/.tmux/plugins/tpm/tpm'
 
