--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,6 +24,9 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @vim_navigator_prefix_mapping_clear_screen ""
+
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy' # 'xclip -in -selection clipboard'
