tmux: detach-on-destroy off

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -44,7 +44,7 @@ set -g set-titles-string "tmux:#W#I"
 set -g base-index 1
 set -g status-left "-- #W --"
 set -g status-right "#H:#S"
-set -g detach-on-destroy on
+set -g detach-on-destroy off
 
 # Window options
 setw -g monitor-activity off
