tmux: Change command to killing session instead of server

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@ unbind C-b
 bind C-a send-prefix
 
 bind k confirm kill-window
-bind K confirm kill-server
+bind K confirm kill-session
 
 bind -n C-right next-window
 bind -n C-left previous-window
