i3: Remove ghostty workaround
This was necessary because of a bug, but is fixed now.

--- a/i3/config
+++ b/i3/config
@@ -33,7 +33,7 @@ floating_modifier $mod
 # bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec urxvt -fn "xft:DejaVu Sans Mono"
 #bindsym $mod+Return exec wezterm start --always-new-process
-bindsym $mod+Return exec GTK_IM_MODULE=simple ghostty
+bindsym $mod+Return exec ghostty
 
 # kill focused window
 bindsym $mod+k kill
