--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -39,9 +39,10 @@
         "format-icons": {
             "1": "",
             "2": "",
-            "3": "",
-            "0": "",
-            "5": "",
+            "3": "",
+            "4": "",
+            "9": "",
+            "10": "",
         }
     },
     "keyboard-state": {
@@ -89,13 +90,13 @@
         "tooltip-format": "MPD (connected)",
         "tooltip-format-disconnected": "MPD (disconnected)"
     },
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": "",
-            "deactivated": ""
-        }
-    },
+    // "idle_inhibitor": {
+    //     "format": "{icon}",
+    //     "format-icons": {
+    //         "activated": "",
+    //         "deactivated": ""
+    //     }
+    // },
     "tray": {
         // "icon-size": 21,
         "spacing": 10,
@@ -107,6 +108,7 @@
     "clock": {
         // "timezone": "America/New_York",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "format": "{:%Y-%m-%d  %H:%M}",
         "format-alt": "{:%Y-%m-%d}"
     },
     "cpu": {
