--- a/sway/config
+++ b/sway/config
@@ -223,7 +223,14 @@ bindsym $mod+r mode "resize"
 #     }
 # }
 
-bar swaybar_command waybar
+bar {
+    swaybar_command waybar
+}
+
+default_border none
+default_floating_border none
+titlebar_padding 1
+titlebar_border_thickness 0
 
 include /etc/sway/config.d/*
 
