sway: Add lock binding and border between windows

--- a/sway/config
+++ b/sway/config
@@ -90,6 +90,8 @@ input "1:1:AT_Translated_Set_2_keyboard" {
     # Reload the configuration file
     bindsym $mod+Shift+c reload
 
+    # Lock screen
+    bindsym $mod+Shift+p exec swaylock -f -c 000000
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 #
@@ -227,7 +229,7 @@ bar {
     swaybar_command waybar
 }
 
-default_border none
+default_border pixel 1
 default_floating_border none
 titlebar_padding 1
 titlebar_border_thickness 0
