--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,22 +50,28 @@ set -g detach-on-destroy off
 setw -g monitor-activity off
 setw -g automatic-rename on
 
-set -g @plugin "janoamaral/tokyo-night-tmux"
+#set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin 'Nybkox/tmux-kanagawa'
 
-set -g @tokyo-night-tmux_show_netspeed 0
-set -g @tokyo-night-tmux_netspeed_showip 2      # Display IPv4 address (default 0)
-set -g @tokyo-night-tmux_netspeed_refresh 1     # Update interval in seconds (default 1)
+set -g @kanagawa-ignore-window-colors true
+set -g @kanagawa-plugins "ssh-session attached-clients weather"
+set -g @kanagawa-clients-minimum 2
+set -g @kanagawa-fixed-location " Karlsruhe, Baden-Wurttemberg"
 
-set -g @tokyo-night-tmux_window_id_style digital
-set -g @tokyo-night-tmux_pane_id_style hsquare
-set -g @tokyo-night-tmux_zoom_id_style dsquare
-
-set -g @tokyo-night-tmux_show_datetime 0
-set -g @tokyo-night-tmux_date_format MYD
-set -g @tokyo-night-tmux_time_format 24H
-
-set -g @tokyo-night-tmux_show_path 0
-set -g @tokyo-night-tmux_path_format relative # 'relative' or 'full'
+# set -g @tokyo-night-tmux_show_netspeed 0
+# set -g @tokyo-night-tmux_netspeed_showip 2      # Display IPv4 address (default 0)
+# set -g @tokyo-night-tmux_netspeed_refresh 1     # Update interval in seconds (default 1)
+#
+# set -g @tokyo-night-tmux_window_id_style digital
+# set -g @tokyo-night-tmux_pane_id_style hsquare
+# set -g @tokyo-night-tmux_zoom_id_style dsquare
+#
+# set -g @tokyo-night-tmux_show_datetime 0
+# set -g @tokyo-night-tmux_date_format MYD
+# set -g @tokyo-night-tmux_time_format 24H
+#
+# set -g @tokyo-night-tmux_show_path 0
+# set -g @tokyo-night-tmux_path_format relative # 'relative' or 'full'
 
 run '~/.tmux/plugins/tpm/tpm'
 
