aerospace: Directions same as in sway
Also ghostty cannot be started like that?

--- a/aerospace.toml
+++ b/aerospace.toml
@@ -13,14 +13,13 @@ enable-normalization-opposite-orientation-for-nested-containers = true
 on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
  
 [mode.main.binding]
-#alt-enter = 'exec-and-forget /opt/homebrew/bin/wezterm start --always-new-process'
-alt-enter = 'exec-and-forget /opt/homebrew/bin/ghostty'
+alt-enter = 'exec-and-forget /opt/homebrew/bin/wezterm start --always-new-process'
 
 # i3 wraps focus by default
-alt-j =         'focus --boundaries-action wrap-around-the-workspace left'
-alt-k =         'focus --boundaries-action wrap-around-the-workspace down'
-alt-l =         'focus --boundaries-action wrap-around-the-workspace up'
-alt-semicolon = 'focus --boundaries-action wrap-around-the-workspace right'
+alt-h =         'focus --boundaries-action wrap-around-the-workspace left'
+alt-j =         'focus --boundaries-action wrap-around-the-workspace down'
+alt-k =         'focus --boundaries-action wrap-around-the-workspace up'
+alt-l =         'focus --boundaries-action wrap-around-the-workspace right'
 
 alt-shift-j = 'move left'
 alt-shift-k = 'move down'
@@ -28,7 +27,7 @@ alt-shift-l = 'move up'
 alt-shift-semicolon = 'move right'
 
 # Consider using 'join-with' command as a 'split' replacement if you want to enable normalizations
-alt-h = 'join-with right'
+alt-b = 'join-with right'
 alt-v = 'join-with down'
 
 alt-f = 'fullscreen'
