--- a/sway/config
+++ b/sway/config
@@ -18,7 +18,7 @@ set $term ~/.local/bin/ghostty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu dmenu_path | wmenu | xargs swaymsg exec --
+set $menu dmenu_path | wofi --show=run,drun -t ghostty | xargs swaymsg exec --
 
 include /etc/sway/config-vars.d/*
 include /etc/sway/config.d/*
@@ -242,4 +242,7 @@ exec swaync
 # toggle control center
 bindsym $mod+Shift+n exec swaync-client -t -sw
 
+exec nm-applet --indicator
+exec wl-paste --watch cliphist store
+exec ghostty
 
