--- a/ghostty/config
+++ b/ghostty/config
@@ -16,6 +16,7 @@ font-feature = ss07
 font-feature = ss08
 
 background-opacity = 0.9
+background-blur = true
 gtk-titlebar = false
 macos-titlebar-style = hidden
 gtk-adwaita = true
