tmux: Newline for opencode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,6 +37,10 @@ bind-key -r F run-shell "tmux neww ~/.local/bin/tmux-switch"
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
 
+bind-key -n S-Enter if-shell '[ "#{pane_current_command}" = "opencode" || "#{pane_current_command}" = "claude" ]' \
+    "send-keys '\\' Enter" \
+    "send-keys S-Enter"
+
 # Options
 set -g bell-action any
 set -g set-titles on
