--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,7 @@ bind -n C-right next-window
 bind -n C-left previous-window
 bind -n C-up switch-client -n
 bind -n C-down switch-client -p
+bind -n C-s switch-client -l
 
 unbind |
 unbind -
