--- a/ghostty/config
+++ b/ghostty/config
@@ -1,4 +1,4 @@
-theme = tokyonight
+theme = TokyoNight
 term = xterm-256color
 
 font-family = "MonaspiceAr Nerd Font Mono"
@@ -19,7 +19,6 @@ background-opacity = 0.9
 background-blur = true
 gtk-titlebar = false
 macos-titlebar-style = hidden
-gtk-adwaita = true
 
 
 # keybindings
