--- a/hypr/input.conf
+++ b/hypr/input.conf
@@ -1,10 +1,9 @@
 # Control your input devices
 # See https://wiki.hypr.land/Configuring/Variables/#input
 input {
-  # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
-  # kb_layout = us,dk,eu
-  kb_file = ~/.config/xkb/symbols/us-prog
-  kb_options = compose:caps # ,grp:alts_toggle
+  kb_layout = us-prog
+  kb_variant =
+  kb_options = compose:caps
 
   # Change speed of keyboard repeat
   repeat_rate = 40
