--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -1,30 +1,81 @@
+# Override modifier key: use ALT instead of SUPER
+unbind = SUPER, SPACE
+
+# Application launcher with ALT+d
+bindd = ALT, D, Launch apps, exec, walker -p "Start…"
+
 # Application bindings
 $terminal = uwsm app -- $TERMINAL
 $browser = omarchy-launch-browser
 
-bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
-bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
-bindd = SUPER, B, Browser, exec, $browser
-bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
-bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
-bindd = SUPER, N, Editor, exec, omarchy-launch-editor
-bindd = SUPER, T, Activity, exec, $terminal -e btop
-bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
-bindd = SUPER, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
-bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
-bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
+bindd = ALT, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
+bindd = ALT, F, File manager, exec, uwsm app -- nautilus --new-window
+bindd = ALT, B, Browser, exec, $browser
+bindd = ALT SHIFT, B, Browser (private), exec, $browser --private
+bindd = ALT, M, Music, exec, omarchy-launch-or-focus spotify
+bindd = ALT, N, Editor, exec, omarchy-launch-editor
+bindd = ALT, T, Activity, exec, $terminal -e btop
+bindd = ALT SHIFT, D, Docker, exec, $terminal -e lazydocker
+bindd = ALT, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
+bindd = ALT, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
+bindd = ALT, slash, Passwords, exec, uwsm app -- 1password
 
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
-bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
-bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
-bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
-bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
-bindd = SUPER, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
-bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
-bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
-bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
-bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
+bindd = ALT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
+bindd = ALT SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
+bindd = ALT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
+bindd = ALT, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
+bindd = ALT, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
+bindd = ALT SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
+bindd = ALT SUPER, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
+bindd = ALT, X, X, exec, omarchy-launch-webapp "https://x.com/"
+bindd = ALT SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
-# Overwrite existing bindings, like putting Omarchy Menu on Super + Space
-# unbind = SUPER, SPACE
-# bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
+# Window management bindings
+bindd = ALT, W, Close active window, killactive,
+
+# Tiling controls
+bindd = ALT, J, Toggle split, togglesplit,
+bindd = ALT, P, Pseudo window, pseudo,
+bindd = ALT, V, Toggle floating, togglefloating,
+
+# Focus movement
+bindd = ALT, left, Move focus left, movefocus, l
+bindd = ALT, right, Move focus right, movefocus, r
+bindd = ALT, up, Move focus up, movefocus, u
+bindd = ALT, down, Move focus down, movefocus, d
+
+# Workspace switching
+bindd = ALT, code:10, Switch to workspace 1, workspace, 1
+bindd = ALT, code:11, Switch to workspace 2, workspace, 2
+bindd = ALT, code:12, Switch to workspace 3, workspace, 3
+bindd = ALT, code:13, Switch to workspace 4, workspace, 4
+bindd = ALT, code:14, Switch to workspace 5, workspace, 5
+bindd = ALT, code:15, Switch to workspace 6, workspace, 6
+bindd = ALT, code:16, Switch to workspace 7, workspace, 7
+bindd = ALT, code:17, Switch to workspace 8, workspace, 8
+bindd = ALT, code:18, Switch to workspace 9, workspace, 9
+bindd = ALT, code:19, Switch to workspace 10, workspace, 10
+
+# Move window to workspace
+bindd = ALT SHIFT, code:10, Move window to workspace 1, movetoworkspace, 1
+bindd = ALT SHIFT, code:11, Move window to workspace 2, movetoworkspace, 2
+bindd = ALT SHIFT, code:12, Move window to workspace 3, movetoworkspace, 3
+bindd = ALT SHIFT, code:13, Move window to workspace 4, movetoworkspace, 4
+bindd = ALT SHIFT, code:14, Move window to workspace 5, movetoworkspace, 5
+bindd = ALT SHIFT, code:15, Move window to workspace 6, movetoworkspace, 6
+bindd = ALT SHIFT, code:16, Move window to workspace 7, movetoworkspace, 7
+bindd = ALT SHIFT, code:17, Move window to workspace 8, movetoworkspace, 8
+bindd = ALT SHIFT, code:18, Move window to workspace 9, movetoworkspace, 9
+bindd = ALT SHIFT, code:19, Move window to workspace 10, movetoworkspace, 10
+
+# Workspace navigation
+bindd = ALT, TAB, Next workspace, workspace, e+1
+bindd = ALT SHIFT, TAB, Previous workspace, workspace, e-1
+bindd = ALT CTRL, TAB, Former workspace, workspace, previous
+
+# Swap windows
+bindd = ALT SHIFT, left, Swap window to the left, swapwindow, l
+bindd = ALT SHIFT, right, Swap window to the right, swapwindow, r
+bindd = ALT SHIFT, up, Swap window up, swapwindow, u
+bindd = ALT SHIFT, down, Swap window down, swapwindow, d
