hypr: Use hjkl for navigation

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -35,15 +35,14 @@ bindd = ALT SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose
 bindd = ALT, W, Close active window, killactive,
 
 # Tiling controls
-bindd = ALT, J, Toggle split, togglesplit,
 bindd = ALT, P, Pseudo window, pseudo,
 bindd = ALT, V, Toggle floating, togglefloating,
 
-# Focus movement
-bindd = ALT, left, Move focus left, movefocus, l
-bindd = ALT, right, Move focus right, movefocus, r
-bindd = ALT, up, Move focus up, movefocus, u
-bindd = ALT, down, Move focus down, movefocus, d
+# Focus movement (vim-style)
+bindd = ALT, H, Move focus left, movefocus, l
+bindd = ALT, L, Move focus right, movefocus, r
+bindd = ALT, K, Move focus up, movefocus, u
+bindd = ALT, J, Move focus down, movefocus, d
 
 # Workspace switching
 bindd = ALT, code:10, Switch to workspace 1, workspace, 1
@@ -74,8 +73,8 @@ bindd = ALT, TAB, Next workspace, workspace, e+1
 bindd = ALT SHIFT, TAB, Previous workspace, workspace, e-1
 bindd = ALT CTRL, TAB, Former workspace, workspace, previous
 
-# Swap windows
-bindd = ALT SHIFT, left, Swap window to the left, swapwindow, l
-bindd = ALT SHIFT, right, Swap window to the right, swapwindow, r
-bindd = ALT SHIFT, up, Swap window up, swapwindow, u
-bindd = ALT SHIFT, down, Swap window down, swapwindow, d
+# Swap windows (vim-style)
+bindd = ALT SHIFT, H, Swap window to the left, swapwindow, l
+bindd = ALT SHIFT, L, Swap window to the right, swapwindow, r
+bindd = ALT SHIFT, K, Swap window up, swapwindow, u
+bindd = ALT SHIFT, J, Swap window down, swapwindow, d
