hypr: omarchy update

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -38,11 +38,11 @@ bindd = ALT, W, Close active window, killactive,
 bindd = ALT, P, Pseudo window, pseudo,
 bindd = ALT, V, Toggle floating, togglefloating,
 
-# Focus movement (vim-style)
-bindd = ALT, H, Move focus left, movefocus, l
-bindd = ALT, L, Move focus right, movefocus, r
-bindd = ALT, K, Move focus up, movefocus, u
-bindd = ALT, J, Move focus down, movefocus, d
+# Focus movement (vim-style) - with monitor crossing
+binde = ALT, H, movefocus, l
+binde = ALT, L, movefocus, r
+binde = ALT, K, movefocus, u
+binde = ALT, J, movefocus, d
 
 # Workspace switching
 bindd = ALT, code:10, Switch to workspace 1, workspace, 1
