--- a/hypr/looknfeel.conf
+++ b/hypr/looknfeel.conf
@@ -10,6 +10,15 @@ general {
     # layout = master
 }
 
+cursor {
+    no_warps = false
+    enable_hyprcursor = true
+}
+
+misc {
+    force_default_wallpaper = 0
+}
+
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     # Use round window corners
