hypr: per device input

--- a/hypr/input.conf
+++ b/hypr/input.conf
@@ -3,7 +3,6 @@
 input {
   kb_layout = us-prog
   kb_variant =
-  kb_options = compose:caps
 
   # Change speed of keyboard repeat
   repeat_rate = 40
@@ -25,6 +24,18 @@ input {
     # Control the speed of your scrolling
     scroll_factor = 0.4
   }
+}
+
+device {
+  name = kinesis-advantage360
+  kb_layout = us-prog
+  kb_options = compose:caps
+}
+
+device {
+  name = at-translated-set-2-keyboard
+  kb_layout = us-prog
+  kb_options = caps:swapescape
 }
 
 # Scroll nicely in the terminal
