hypr: Use new kb variant

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -21,15 +21,15 @@ bindd = ALT, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- ob
 bindd = ALT, slash, Passwords, exec, uwsm app -- 1password
 
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
-bindd = ALT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
-bindd = ALT SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
-bindd = ALT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
-bindd = ALT, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
+# bindd = ALT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
+# bindd = ALT SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
+# bindd = ALT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
+# bindd = ALT, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
 bindd = ALT, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
 bindd = ALT SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
-bindd = ALT SUPER, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
+# bindd = ALT SUPER, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
 bindd = ALT, X, X, exec, omarchy-launch-webapp "https://x.com/"
-bindd = ALT SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
+#bindd = ALT SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
 # Window management bindings
 bindd = ALT, W, Close active window, killactive,
