--- a/hypr/input.conf
+++ b/hypr/input.conf
@@ -34,7 +34,7 @@ device {
 
 device {
   name = at-translated-set-2-keyboard
-  kb_layout = us-prog
+  kb_variant = us-prog-laptop
   kb_options = caps:swapescape
 }
 
