--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -8,14 +8,14 @@ bindd = ALT, D, Launch apps, exec, walker -p "Start…"
 $terminal = uwsm app -- $TERMINAL
 $browser = omarchy-launch-browser
 
-bindd = ALT, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
+bindd = ALT, return, Terminal, exec, $terminal --dir="$(omarchy-cmd-terminal-cwd)"
 bindd = ALT, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = ALT, B, Browser, exec, $browser
 bindd = ALT SHIFT, B, Browser (private), exec, $browser --private
 bindd = ALT, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = ALT, N, Editor, exec, omarchy-launch-editor
-bindd = ALT, T, Activity, exec, $terminal -e btop
-bindd = ALT SHIFT, D, Docker, exec, $terminal -e lazydocker
+bindd = ALT, T, Activity, exec, omarchy-launch-tui btop
+bindd = ALT SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 bindd = ALT, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
 bindd = ALT, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
 bindd = ALT, slash, Passwords, exec, uwsm app -- 1password
